--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "12.2.4",
+    "next": "11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
